# symbolic_cues_2025

./: .gitignore  .gitmodules  README.md  experiment.py  pyproject.toml
ExpAssets/Config/: symbolic_cues_2025_independent_variables.py  symbolic_cues_2025_params.py  symbolic_cues_2025_schema.sql  symbolic_cues_2025_user_queries.json
ExpAssets/Resources/code/: OptiTracker.py
ExpAssets/Resources/code/optitracker/: .gitignore  Optitracker.py
ExpAssets/Resources/code/optitracker/MotiveStreamParser/: .gitignore  MotivePacketStructures.py  MotiveStreamParser.py
ExpAssets/Resources/code/optitracker/NatNetClient/: .gitignore  NatNetClient.py
ExpAssets/Resources/code/optitracker/modules/natnetclient/: NatNetClient.py
ExpAssets/Resources/code/optitracker/modules/parser/: DataParser.py  ParsingStructures.py
ExpAssets/Resources/code/optitracker/optitracker/: OptiTracker.py
ExpAssets/Resources/code/optitracker/optitracker/tests/: test_Optitracker.py
ExpAssets/Resources/code/optitracker/optitracker/tests/recorded_opti_files/: gripaperture_trial_handmarkers.csv
ExpAssets/Resources/code/optitracker/tests/: test_Optitracker.py
