[project]
name = "symbolic-cues-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "construct>=2.10.70",
    "klibs",
    "pyautogui>=0.9.54",
    "rich>=14.0.0",
]

[tool.uv.sources]
klibs = { git = "https://github.com/a-hurst/klibs" }
